--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   pronouns         : # example: "she/her"
   bio              : "Life pendulums between research and sleep. I do write sometimes on random, futile stuff-a museum of things I want to forget"
   location         : "Earth"
-  employer         : "Department of Computational \nMedicine and Bioinformatics, UM Ann Arbor"
+  employer         : "Dept of Computational \nMedicine and Bioinformatics, UM Ann Arbor"
   uri              : # URL
   email            : "rsudhars@med.umich.edu"
 
