--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "rangasudharshan05.github.io/sudharshan.github.io/"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "ranga_image.jpg"
   name             : "Ranga Sudharshan"
   pronouns         : # example: "she/her"
   bio              : "Life pendulums between research and sleep. I do write sometimes on random, futile stuff-a museum of things I want to forget"
@@ -54,7 +54,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "https://github.com/RangaSudharshan05"
+  github           : "RangaSudharshan05"
   kaggle           : # Username
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")
 
