--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   name             : "Ranga Sudharshan"
   pronouns         : # example: "she/her"
   bio              : "Life pendulums between research and sleep. I do write sometimes on random, futile stuff-a museum of things I want to forget"
-  location         : "Earth"
+  location         : "Ann Arbor"
   employer         : "Dept of Computational<br/>Medicine and Bioinformatics<br/>UM Ann Arbor"
   uri              : # URL
   email            : "rsudhars@med.umich.edu"
