--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -26,7 +26,7 @@ main:
     url: /#about
     
   - title: "CV"
-    url: /files/CV.pdf
+    url: /files/CV_2026.pdf
 
   - title: "Research"
     url: /#research
